--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.4.0"
+    "@testing-library/jest-dom": "^5.0.0",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^8.0.3"
   }
 }
